--- a/index.html
+++ b/index.html
@@ -10,63 +10,63 @@
 </head>
 <body>
     <header class="bg-primary text-white py-3">
-        <div class="container d-flex align-items-center justify-content-center">
+        <div class="container text-center">
             <img src="images/logo.png" alt="golfinho trovao tropical" class="me-3" style="width: 200px;">
-            <h1 class="display-3 mb-0" style="font-family: serif;">Trovão Tropical</h1>
+            <h1 class="display-3 mb-0">Trovão Tropical</h1>
         </div>
     </header>
     <div class="bg-info py-2">
         <div class="container text-end">
             <form class="d-inline-block">
-                <input type="text" class="form-control d-inline-block w-auto me-2" id="txtCidade">
-                <button type="button" class="btn btn-light" id="btnAddCity">Adicionar</button>
+                <input id="txtCidade" type="text" class="form-control d-inline-block w-auto me-2">
+                <button id="btnAdicionarCidade" type="button" class="btn btn-light">Adicionar</button>
             </form>
         </div>
     </div>
     <main class="container my-4">
         <div class="row g-4">
             <div class="col-12 col-md-4">
-                <div class="card wheaterCard" id="MaríliaCard">
+                <div id="MaríliaCard" class="card wheaterCard">
                     <div class="card-header">
                         <h2 class="h5 mb-0 text-center">
                             Tempo agora em<br>
-                            <span class="cityName fst-italic">Marília</span>
+                            <span class="nomeCidade fst-italic">Marília</span>
                         </h2>
                     </div>
-                    <div class="card-body cityData">
-                        <p class="temp display-4 text-center">30.6&deg;</p>
-                        <p class="itemsCD condition d-flex justify-content-between"><span>Clima</span><span>Ensolarado</span></p>
-                        <p class="itemsCD sensacao d-flex justify-content-between"><span>Sensação Térmica</span><span>31.0</span></p>
+                    <div class="card-body dadosCidade">
+                        <p class="tempo display-4 text-center">30.6&deg;</p>
+                        <p class="itemsCD condicao d-flex justify-content-evenly"><span>Clima</span><span>Ensolarado</span></p>
+                        <p class="itemsCD sensacao d-flex justify-content-evenly"><span>Sensação Térmica</span><span>31.0</span></p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-4">
-                <div class="card wheaterCard" id="BauruCard">
+                <div id="BauruCard" class="card wheaterCard">
                     <div class="card-header">
                         <h2 class="h5 mb-0 text-center">
                             Tempo agora em<br>
-                            <span class="cityName fst-italic">Bauru</span>
+                            <span class="nomeCidade fst-italic">Bauru</span>
                         </h2>
                     </div>
-                    <div class="card-body cityData">
-                        <p class="temp display-4 text-center">30.6&deg;</p>
-                        <p class="itemsCD condition d-flex justify-content-between"><span>Clima</span><span>Ensolarado</span></p>
-                        <p class="itemsCD sensacao d-flex justify-content-between"><span>Sensação Térmica</span><span>31.0</span></p>
+                    <div class="card-body dadosCidade">
+                        <p class="tempo display-4 text-center">30.6&deg;</p>
+                        <p class="itemsCD condicao d-flex justify-content-evenly"><span>Clima</span><span>Ensolarado</span></p>
+                        <p class="itemsCD sensacao d-flex justify-content-evenly"><span>Sensação Térmica</span><span>31.0</span></p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-4">
-                <div class="card wheaterCard" id="CatanduvaCard">
+                <div id="CatanduvaCard" class="card wheaterCard">
                     <div class="card-header">
                         <h2 class="h5 mb-0 text-center">
                             Tempo agora em<br>
-                            <span class="cityName fst-italic">Catanduva</span>
+                            <span class="nomeCidade fst-italic">Catanduva</span>
                         </h2>
                     </div>
-                    <div class="card-body cityData">
-                        <p class="temp display-4 text-center">30.6&deg;</p>
-                        <p class="itemsCD condition d-flex justify-content-between"><span>Clima</span><span>Ensolarado</span></p>
-                        <p class="itemsCD sensacao d-flex justify-content-between"><span>Sensação Térmica</span><span>31.0</span></p>
+                    <div class="card-body dadosCidade">
+                        <p class="tempo display-4 text-center">30.6&deg;</p>
+                        <p class="itemsCD condicao d-flex justify-content-evenly"><span>Clima</span><span>Ensolarado</span></p>
+                        <p class="itemsCD sensacao d-flex justify-content-evenly"><span>Sensação Térmica</span><span>31.0</span></p>
                     </div>
                 </div>
             </div>
